--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=Uq5qvyAAAAAJD"
   email            : "mengya@u.nus.edu"
   researchgate     : "https://www.researchgate.net/profile/Xu-Mengya"
+  linkedin         : "https://www.linkedin.com/company/mengya/"
   uri              :
   bitbucket        :
   codepen          :
