--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Mengya Xu"
-  avatar           : "images/Mengya.png"
+  avatar           : "images/Mengya.jpg"
   bio              : "National University of Singapore"
   location         : "Singapore"
   employer         :
