--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 
 # Site Author
 author:
-  name             : "Mengya Xu"
+  name             : "Mengya Xu (徐梦雅)"
   avatar           : "images/Mengya.jpg"
   bio              : "National University of Singapore"
   location         : "Singapore"
