--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Singapore"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=AmyXuMengya@gmail.com"
+  googlescholar    : "https://scholar.google.com/citations?user=Uq5qvyAAAAAJD&user=Uq5qvyAAAAAJ"
   email            : "mengya@u.nus.edu"
   researchgate     : "https://www.researchgate.net/profile/Xu-Mengya"
   uri              :
